# papermap

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
docs/deploy/: agent-prompt.md
docs/superpowers/plans/: 2026-05-15-papermap-multi-view-viewer.md  2026-05-15-papermap-web-view.md
docs/superpowers/specs/: 2026-05-14-papermap-web-view-design.md  2026-05-15-papermap-multi-view-viewer-design.md  2026-05-15-resourcelib-papermap-bridge-design.md
examples/: all-fm-in-biomedical-science.yaml  comp-bio-internships-2027.yaml  comp-bio-internships-intl-2027.yaml  comp-bio-jobs-2027.yaml  fm-to-virtual-cells-resourcelib.yaml  fm-to-virtual-cells.yaml  hrd-ccr8-pancancer.yaml
examples/blogs/comp-bio-internships-2027/: application-timeline-2027.md  application-timeline-2027.zh.md  beyond-the-marquee-2026-06-26.md  beyond-the-marquee-2026-06-26.zh.md  big-tech-bio-health-2026-06-26.md  big-tech-bio-health-2026-06-26.zh.md  f1-cpt-opt-playbook.md  f1-cpt-opt-playbook.zh.md  how-to-read-this-vault.md  how-to-read-this-vault.zh.md  landscape-and-what-i-think-2026-06-25.md  landscape-and-what-i-think-2026-06-25.zh.md  the-2027-internship-overview-2026-06-26.md  the-2027-internship-overview-2026-06-26.zh.md
examples/blogs/comp-bio-internships-intl-2027/: how-to-read-intl-2026-06-26.md  how-to-read-intl-2026-06-26.zh.md  landscape-international-2026-06-26.md  landscape-international-2026-06-26.zh.md
examples/blogs/comp-bio-jobs-2027/: how-to-read-the-jobs-vault-2026-06-26.md  how-to-read-the-jobs-vault-2026-06-26.zh.md  (+10 more)
papermap/: __init__.py  __main__.py  blogs.py  cli.py  export.py  layout.py  render.py  schema.py  server.py  state.py
papermap/loaders/: __init__.py  detect.py  native.py  resourcelib.py
papermap/static/: app.css  app.js  archive-state.js  blogs-state.js  comments-state.js  comments.js  filterbar.js  filters.js  lang.js  margin-comments.js  presentations-state.js  stars-state.js  state.js  topics-state.js  zen.js
papermap/templates/: index.html
scripts/: audit_blog_links.py  check_paper_urls.py  expand_descriptions.py  generate_qa.py
tests/: test_blogs.py  test_export.py  test_items.py  test_loaders_detect.py  test_loaders_resourcelib.py  test_papermap.py  test_server.py  test_state.py
tests/fixtures/: resourcelib_minimal.yaml
(+237 files in other folders)
