[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "papermap"
version = "0.3.0"
description = "Interactive relationship maps for a body of literature — a clustered-ring node-link diagram from a simple YAML corpus."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Liudeng Zhang" }]
keywords = ["literature", "network", "visualization", "plotly", "citation-graph", "reading-list"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "plotly>=5.0",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
papermap = "papermap.cli:main"

[project.urls]
Homepage = "https://github.com/Light-Kit/papermap"
Issues = "https://github.com/Light-Kit/papermap/issues"

[tool.setuptools]
packages = ["papermap"]

[tool.setuptools.package-data]
papermap = [
    "templates/*.html",
    "static/*.js",
    "static/*.css",
    "static/views/*.js",
]
